--- a/main.css
+++ b/main.css
@@ -1,13 +1,18 @@
 body {
 	font-family: 'Merriweather', 'Roboto', sans-serif;
 	font-weight: 300;
-    background-color: lightskyblue;
+    background-color: #010713;
     padding: 100px;
 }
 
 header {
-	padding: 20px 0;
-    background: lightskyblue;
+	padding: 25px 0;
+    background: #212630;
+    min-width: 100%;
+    transition: all 0.1s ease;
+}
+    padding: 15px 0;
+    transition: all 0.4s ease;
 }
 
 header .row,
@@ -22,6 +27,9 @@ header h1 {
 	margin: 0;
     color: #FFFFFF
 }
+    font-size: 30px;
+    padding-left: 30px;
+}
 header nav {
 	display: flex;
 	justify-content: flex-end;
@@ -33,7 +41,7 @@ header p {
 }
 
 header a, header a:hover, header a:enabled {
-    color: black;
+    color: #b87604;
     text-decoration: none;
 }
 
@@ -59,6 +67,7 @@ header a:active {
 
 .jumbotron h2 {
     font-size: 60px;
+    font-family: 'Segoe UI';
     font-weight: 700;
     margin: 0;
     color: #FFF;
@@ -66,6 +75,7 @@ header a:active {
 
 .jumbotron h3 {
     margin: 0 0 20px;
+    font-family: 'Segoe UI';
     color: #FFF;
 }
 
@@ -88,7 +98,7 @@ header a:active {
 
 .btn.btn-primary:hover {
   color: #ffffff;
-  background-color: #A32E00;
+  background-color: #b87604;
 }
 
 .btn-secondary {
